<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">石景山</string>

    <!-- retry dialog -->
    <string name="retry_title">网络错误</string>
    <string name="retry_text">请检查网络连接并重试</string>
    <string name="retry_button">重试</string>
    
    <!-- unsupported dialog -->
    <string name="unsupported_title">设备故障</string>
    <string name="unsupported_text">您的设备不支持UTF-8编码</string>
    <string name="unsupported_button">退出</string>
    
    <!-- logout dialog -->
    <string name="logout_title">注销操作</string>
    <string name="logout_text">确定要注销吗？</string>
    <string name="logout_button">注销</string>
    
    <!-- account exist dialog -->
    <string name="account_exist_title">注册错误</string>
    <string name="account_exist_text">该用户名已存在</string>
    <string name="account_exist_button">确定</string>
    
    <!-- account not exist dialog -->
    <string name="account_not_exist_title">登录错误</string>
    <string name="account_not_exist_text">用户不存在</string>
    <string name="account_not_exit_button">确定</string>
    
    <!-- account canceled dialog-->
    <string name="account_canceled_title">登录错误</string>
    <string name="account_canceled_text">用户已注销</string>
    <string name="account_canceled_button">确定</string>
    
    <!-- account frozen dialog -->
    <string name="account_frozen_title">登录错误</string>
    <string name="account_frozen_text">用户已冻结</string>
    <string name="account_frozen_button">确定</string>
    
    <!-- account not activated dialog -->
    <string name="account_not_activated_title">登录错误</string>
    <string name="account_not_activated_text">用户尚未激活</string>
    <string name="account_not_activated_button">确定</string>
    
    <!-- account password not match dialog -->
    <string name="account_password_not_match_title">登录错误</string>
    <string name="account_password_not_match_text">用户名或密码错误</string>
    <string name="account_password_not_match_button">确定</string>
    
    <!-- old password and new password same dialog -->
    <string name="old_password_new_password_same_title">修改错误</string>
    <string name="old_password_new_password_same_text">新密码与旧密码相同</string>
    <string name="old_password_new_password_same_button">确定</string>
    
    <!-- server no data error dialog -->
    <string name="no_data_error_title">服务器错误</string>
    <string name="no_data_error_text">没有数据</string>
    <string name="no_data_error_button">确定</string>
    
    <!-- server database error dialog -->
    <string name="database_error_title">服务器错误</string>
    <string name="database_error_text">数据库操作出错</string>
    <string name="database_error_button">确定</string>

    <!-- log activity -->
    <string name="log_title">登录</string>
    <string name="log_username">账号</string>
    <string name="log_username_hint">用户名/邮箱/手机号</string>
    <string name="log_password">密码</string>
    <string name="log_password_hint">6&#8211;16位字符</string>
    <string name="log_in">登录</string>
    <string name="log_find_password">找回密码</string>
    <string name="log_register">还没有账号？点击注册</string>

    <!-- register activity -->
    <string name="register_title">注册</string>
    <string name="register_username">账号</string>
    <string name="register_username_hint">6&#8211;20位字母或数字</string>
    <string name="register_password">密码</string>
    <string name="register_password_hint">6&#8211;20位字母或数字</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_confirm_password_hint">6&#8211;20位字母或数字</string>
    <string name="register_mobile_number">手机号</string>
    <string name="register_mobile_number_hint">11位手机号码</string>
    <string name="register_enterprise">企业</string>
    <string name="register_enterprise_hint">选择您所在的企业</string>
    <string name="register_user_type">用户类型</string>
    <string name="register_user_type_hint">选择您的用户类型</string>
    <string name="register">注册</string>

    <!-- username password mobile number enterprise id constraints -->
    <string name="digits_username">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <integer name="min_length_username">6</integer>
    <integer name="max_length_username">20</integer>

    <string name="digits_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <integer name="min_length_password">6</integer>
    <integer name="max_length_password">20</integer>

    <string name="digits_mobile_number">0123456789</string>
    <integer name="length_mobile_number">11</integer>

    <!-- business dialog -->
    <string name="business_title">选择行业</string>
    <string name="add_new_enterprise">没有您的企业？点击添加</string>

    <!-- new enterprise dialog -->
    <string name="new_enterprise_title">添加企业</string>
    <string name="new_enterprise_hint">企业、单位、公司名称</string>
    <string name="new_enterprise_confirm">确定</string>

    <!-- enterprise dialog -->
    <string name="enterprise_title">选择企业</string>

    <!-- user type dialog -->
    <string name="user_type_title">选择用户类型</string>
    
    <!-- subscribe activity -->
    <string name="subscribe_title">订阅</string>

    <!-- setting activity -->
    <string name="setting_title">设置</string>
    <string name="change_password">修改密码</string>
    <string name="clear_cache">清空缓存</string>
    <string name="suggestion">意见反馈</string>
    <string name="about">关于</string>
    
    <!-- change password activity -->
    <string name="change_password_title">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="old_password_hint">6&#8211;20位字母或数字</string>
    <string name="new_password">新密码</string>
    <string name="new_password_hint">6&#8211;20位字母或数字</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="confirm_new_password_hint">6&#8211;20位字母或数字</string>
    
    <!-- notification list activity -->
    <string name="notification_list_title">通知</string>
    
    <!-- notification activity -->
    <string name="notification_title">通知详情</string>
    
    <!-- suggestion activity -->
    <string name="suggestion_title">意见反馈</string>
    <string name="suggestion_content">反馈内容</string>
    <string name="suggestion_content_hint">请输入您的意见或建议</string>
    <string name="suggestion_contact">联系方式</string>
    <string name="suggestion_contact_hint">Email或QQ号</string>
    <string name="suggestion_submit">提交</string>
    
    <!-- about activity -->
    <string name="about_title">关于</string>
    <string name="about_text">石景山区企业服务平台1.0......</string>

    <!-- server request url -->
    <string name="server_url">http://s-94379.gotocdn.com/sjs/JsonAction</string>

</resources>