<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.panguso.android.shijingshan.widget.BlueTitleBar
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="48dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/log_background" >

        <TableLayout
            android:id="@+id/username_password_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_border" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/log_username"
                    android:textColor="@color/log_table_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:background="@null"
                    android:digits="@string/digits_username"
                    android:hint="@string/log_username_hint"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:textColorHint="@color/log_table_edit_hint"
                    android:textSize="16sp" />
            </TableRow>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@color/delimiter" />

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/log_password"
                    android:textColor="@color/log_table_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:background="@null"
                    android:digits="@string/digits_password"
                    android:hint="@string/log_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:textColorHint="@color/log_table_edit_hint"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/log_in"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_below="@id/username_password_table"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/blue_button_background"
            android:enabled="false"
            android:text="@string/log_in"
            android:textColor="@color/blue_button_text"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/log_in"
            android:layout_margin="5dp" >

            <com.panguso.android.shijingshan.widget.UnderlineButton
                android:id="@+id/find_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/underline_button_background"
                android:padding="15dp"
                android:text="@string/log_find_password"
                android:textColor="@color/log_underline_button_text"
                android:textSize="14sp"
                android:visibility="invisible" />

            <com.panguso.android.shijingshan.widget.UnderlineButton
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/underline_button_background"
                android:padding="15dp"
                android:text="@string/log_register"
                android:textColor="@color/log_underline_button_text"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>