<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@color/new_enterprise_title_background"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/new_enterprise_title"
        android:textColor="@color/new_enterprise_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_enterprise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/new_enterprise_hint"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="@color/new_enterprise_edit_hint"
        android:textSize="16sp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/blue_button_background"
        android:enabled="false"
        android:text="@string/new_enterprise_confirm"
        android:textColor="@color/blue_button_text"
        android:textSize="18sp" />

</LinearLayout>