<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.panguso.android.shijingshan.widget.BlueTitleBar
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="48dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/register_background" >

        <TableLayout
            android:id="@+id/username_password_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_border" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/register_username"
                    android:textColor="@color/register_table_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:background="@null"
                    android:digits="@string/digits_username"
                    android:hint="@string/register_username_hint"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:textColorHint="@color/register_table_edit_hint"
                    android:textSize="16sp" />
            </TableRow>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@color/delimiter" />

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/register_password"
                    android:textColor="@color/register_table_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:background="@null"
                    android:digits="@string/digits_password"
                    android:hint="@string/register_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:textColorHint="@color/register_table_edit_hint"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_username" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="@dimen/register_edittext_width"
            android:layout_height="wrap_content"
            android:digits="@string/digits_username"
            android:inputType="text"
            android:maxLength="20"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_password" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="@dimen/register_edittext_width"
            android:layout_height="wrap_content"
            android:digits="@string/digits_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_mobile_number" />

        <EditText
            android:id="@+id/register_mobile_number"
            android:layout_width="@dimen/register_edittext_width"
            android:layout_height="wrap_content"
            android:digits="@string/digits_mobile_number"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_enterprise_id" />

        <EditText
            android:id="@+id/register_enterprise_id"
            android:layout_width="@dimen/register_edittext_width"
            android:layout_height="wrap_content"
            android:digits="@string/digits_mobile_number"
            android:inputType="number"
            android:singleLine="true" />
    </TableRow>

</LinearLayout>