<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.panguso.android.shijingshan.widget.BlueTitleBar
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="48dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/change_password_background" >

        <TableLayout
            android:id="@+id/change_password_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_border"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/old_password"
                    android:textColor="@color/change_password_table_text"
                    android:textSize="18sp" />

                <com.panguso.android.shijingshan.register.RegisterCheckEditText
                    android:id="@+id/old_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="9dp" />
            </TableRow>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@color/delimiter" />

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/new_password"
                    android:textColor="@color/change_password_table_text"
                    android:textSize="18sp" />

                <com.panguso.android.shijingshan.register.RegisterCheckEditText
                    android:id="@+id/new_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="9dp" />
            </TableRow>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@color/delimiter" />

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/confirm_new_password"
                    android:textColor="@color/change_password_table_text"
                    android:textSize="18sp" />

                <com.panguso.android.shijingshan.register.RegisterCheckEditText
                    android:id="@+id/confirm_new_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="9dp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/change_password"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_below="@id/change_password_table"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/blue_button_background"
            android:enabled="false"
            android:text="@string/change_password"
            android:textColor="@color/blue_button_text"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>